fix: ownrship fix step

--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -96,6 +96,9 @@ jobs:
           apt-get update
           apt-get install gh -y
 
+      - name: Fix git ownership
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
       - name: Create Release with artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
