--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -32,6 +32,17 @@ jobs:
           VERSION=${REF_NAME#v}
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
+      - name: Set tag name
+        id: set-tag-name
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            REF_NAME="${{ github.event.inputs.tag-name }}"
+          else
+            REF_NAME="${{ github.ref_name }}"
+          fi
+
+          echo "tag-name=$REF_NAME" >> $GITHUB_OUTPUT
+
       - name: Check out repository
         uses: actions/checkout@v4
         with:
