--- a/autoware_lanelet2_map_validator/config/params.yaml
+++ b/autoware_lanelet2_map_validator/config/params.yaml
@@ -10,3 +10,5 @@ mapping.intersection.virtual_traffic_light_line_order:
   validation_target_refers: [intersection_coordination]
 mapping.intersection.virtual_traffic_light_section_overlap:
   validation_target_refers: [intersection_coordination]
+mapping.intersection.turn_signal_distance_overlap:
+  default_turn_signal_distance: 15.0
