Add Dockerfile for autoware_lanelet2_map_validator
Signed-off-by: TaikiYamada4 <taiki.yamada@tier4.jp>

--- a/autoware_lanelet2_map_validator/package.xml
+++ b/autoware_lanelet2_map_validator/package.xml
@@ -24,6 +24,8 @@
   <depend>pugixml-dev</depend>
   <depend>yaml-cpp</depend>
 
+  <exec_depend>python3-pyside6</exec_depend>
+
   <test_depend>ament_cmake_ros</test_depend>
 
   <export>
