fix fix_changelog_url START_WORD
Signed-off-by: TaikiYamada4 <taiki.yamada@tier4.jp>

--- a/.github/workflows/fix_changelog_url.yaml
+++ b/.github/workflows/fix_changelog_url.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Apply Fixes to CHANGELOG.rst
         run: |
-          START_WORD=https://github.com/tier4/autoware_lanelet2_map_validator/issues/6
+          START_WORD="https://github.com/tier4/autoware_lanelet2_map_validator/issues/6>"
 
           awk -v start_word="$START_WORD" '
           BEGIN { found=0 }
