--- a/autoware_lanelet2_map_validator/package.xml
+++ b/autoware_lanelet2_map_validator/package.xml
@@ -12,6 +12,7 @@
   <buildtool_depend>autoware_cmake</buildtool_depend>
 
   <depend>autoware_lanelet2_extension</depend>
+  <depend>autoware_lanelet2_extension_python</depend>
   <depend>fmt</depend>
   <depend>lanelet2_core</depend>
   <depend>lanelet2_io</depend>
