--- a/autoware_lanelet2_map_validator/config/params.yaml
+++ b/autoware_lanelet2_map_validator/config/params.yaml
@@ -12,3 +12,5 @@ mapping.intersection.virtual_traffic_light_section_overlap:
   validation_target_refers: [intersection_coordination]
 mapping.intersection.turn_signal_distance_overlap:
   default_turn_signal_distance: 15.0
+mapping.stop_line.regulatory_element_details_for_traffic_signs:
+  max_bounding_box_size: 20.0
