--- a/autoware_lanelet2_map_validator/CMakeLists.txt
+++ b/autoware_lanelet2_map_validator/CMakeLists.txt
@@ -1,14 +1,17 @@
 cmake_minimum_required(VERSION 3.14)
 project(autoware_lanelet2_map_validator)
 
-find_package(autoware_cmake REQUIRED)
-autoware_package()
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(BUILD_SHARED_LIBS OFF)
 
 # Dependencies
-ament_auto_find_build_dependencies()
-find_package(fmt REQUIRED)
+find_package(ament_cmake REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
 find_package(nlohmann_json REQUIRED)
-find_package(yaml-cpp REQUIRED)
 
 # Extract package version
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/package.xml" PACKAGE_XML_CONTENT)
@@ -33,91 +36,95 @@ configure_file(
 )
 
 # Source files
-file(GLOB_RECURSE autoware_lanelet2_map_validator_lib_src
+file(GLOB_RECURSE MAP_VALIDATOR_SRC
   src/common/*.cpp
   src/validators/*.cpp
 )
 
-ament_auto_add_library(autoware_lanelet2_map_validator_lib SHARED
-  ${autoware_lanelet2_map_validator_lib_src}
-)
-
 # NOTE: keep this order in target_include_directories or the build system
 # selects the wrong embedded_defaults.hpp
-target_include_directories(
-  autoware_lanelet2_map_validator_lib PUBLIC
+message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
+message(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
+add_library(map_validator_includes INTERFACE)
+target_include_directories(map_validator_includes INTERFACE
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/include
   ${CMAKE_CURRENT_BINARY_DIR}/include
-  src/include
+  /home/autoware_lanelet2_extension/autoware_lanelet2_extension/include
+  /home/lanelet2/install/include
+  ${EIGEN3_INCLUDE_DIR}
 )
 
-ament_target_dependencies(autoware_lanelet2_map_validator_lib nlohmann_json)
+add_library(autoware_lanelet2_map_validator_obj OBJECT ${MAP_VALIDATOR_SRC})
+target_link_libraries(autoware_lanelet2_map_validator_obj map_validator_includes)
 
-target_link_libraries(autoware_lanelet2_map_validator_lib
-  yaml-cpp
-  fmt::fmt
-)
+#ament_target_dependencies(autoware_lanelet2_map_validator_obj
+#  tf2
+#  tf2_geometry_msgs
+#  geometry_msgs
+#  visualization_msgs
+#)
 
-ament_auto_add_executable(autoware_lanelet2_map_validator
+# ========= Executable =============
+
+add_executable(autoware_lanelet2_map_validator
   src/main.cpp
+  $<TARGET_OBJECTS:autoware_lanelet2_map_validator_obj>
+  /home/autoware_lanelet2_extension/autoware_lanelet2_extension/include/autoware_lanelet2_extension/projection/transverse_mercator_projector.hpp
+  /home/autoware_lanelet2_extension/autoware_lanelet2_extension/include/autoware_lanelet2_extension/projection/mgrs_projector.hpp
 )
+
+# ========= Link Libraries =========
+
+target_link_libraries(autoware_lanelet2_map_validator map_validator_includes)
+
+#ament_target_dependencies(autoware_lanelet2_map_validator
+#  tf2
+#  tf2_geometry_msgs
+#  geometry_msgs
+#  visualization_msgs
+#)
+
+target_link_options(autoware_lanelet2_map_validator PRIVATE -Wl,--start-group)
 
 target_link_libraries(autoware_lanelet2_map_validator
-  autoware_lanelet2_map_validator_lib
+  /home/autoware_lanelet2_extension/build/libautoware_lanelet2_extension_lib.a
+
+  /home/lanelet2/install/lib/liblanelet2_validation.a
+  /home/lanelet2/install/lib/liblanelet2_routing.a
+  /home/lanelet2/install/lib/liblanelet2_traffic_rules.a
+  /home/lanelet2/install/lib/liblanelet2_io.a
+  /home/lanelet2/install/lib/liblanelet2_projection.a
+  /home/lanelet2/install/lib/liblanelet2_core.a
+
+  /usr/lib/x86_64-linux-gnu/libyaml-cpp.a
+  /home/fmt/install/lib/libfmt.a
+  nlohmann_json::nlohmann_json
+  /usr/lib/x86_64-linux-gnu/libboost_program_options.a
+  /usr/lib/x86_64-linux-gnu/libboost_filesystem.a
+  /usr/lib/x86_64-linux-gnu/libboost_system.a
+
+  /usr/lib/x86_64-linux-gnu/libboost_serialization.a
+  /usr/lib/x86_64-linux-gnu/libboost_wserialization.a
+
+  /usr/lib/x86_64-linux-gnu/libGeographic.a
+  /usr/lib/x86_64-linux-gnu/libpugixml.a
+
+  stdc++fs
 )
 
-install(PROGRAMS
-  template/create_new_validator.py
-  DESTINATION lib/${PROJECT_NAME}
-)
+target_link_options(autoware_lanelet2_map_validator PRIVATE -Wl,--end-group)
 
-if(BUILD_TESTING)
-  file(GLOB_RECURSE test_src "test/src/test_*.cpp")
-  ament_auto_add_library(autoware_lanelet2_map_validator_test_lib ${test_src})
+# ========= Install =========
+install(TARGETS autoware_lanelet2_map_validator DESTINATION lib/${PROJECT_NAME})
+install(PROGRAMS template/create_new_validator.py DESTINATION lib/${PROJECT_NAME})
 
-  target_include_directories(autoware_lanelet2_map_validator_test_lib PUBLIC
-    test/src/include
-    src/include)
-
-  target_link_libraries(autoware_lanelet2_map_validator_test_lib
-    autoware_lanelet2_map_validator_lib
-  )
-
-  # test for general lanelet2 map validators
-  function(add_validation_test TEST_FILE)
-    get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
-    string(REPLACE "test_" "" VALIDATION_NAME ${TEST_NAME})
-    ament_add_ros_isolated_gtest(
-      ${VALIDATION_NAME}_test
-      ${TEST_FILE}
-    )
-    target_link_libraries(
-      ${VALIDATION_NAME}_test
-      autoware_lanelet2_map_validator_test_lib
-    )
-  endfunction()
-
-  foreach(TEST_FILE ${test_src})
-    add_validation_test(${TEST_FILE})
-  endforeach()
-endif()
-
+# Optional config files
 install(
-  FILES package.xml
+  DIRECTORY config map_requirements
   DESTINATION share/${PROJECT_NAME}
 )
 
-install(
-  PROGRAMS
-    gui/gui.py
-    gui/gui_helper.py
-    gui/map_visualizer.py
-    gui/matplotlib_widget.py
-  DESTINATION lib/${PROJECT_NAME}/gui
-)
+# Optional test data if desired
+install(DIRECTORY test/data DESTINATION share/${PROJECT_NAME})
 
-ament_auto_package(
-  INSTALL_TO_SHARE
-  test/data
-  config
-  map_requirements
-)
+ament_package()
