--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -1,4 +1,4 @@
-name: build-and-upload-binaries
+name: static-build-and-upload-binaries
 
 on:
   workflow_dispatch:
@@ -8,97 +8,178 @@ on:
         type: string
         required: true
 
+permissions:
+  contents: write
+
 jobs:
-  build-and-upload:
+  build:
     runs-on: ubuntu-22.04
-    container: ghcr.io/autowarefoundation/autoware:core-devel
+    timeout-minutes: 90
 
     steps:
-      - name: Get Release Version
-        id: get_version
-        run: |
-          REF_NAME="${{ github.event.inputs.tag-name }}"
-          VERSION=${REF_NAME#v}
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-
-      - name: Set tag name
-        id: set-tag-name
-        run: |
-          REF_NAME="${{ github.event.inputs.tag-name }}"
-          echo "tag-name=$REF_NAME" >> $GITHUB_OUTPUT
-
-      - name: Check out repository
+      - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ steps.get_version.outputs.version }}
 
-      - name: Install Utilities
+      - name: Install Dependencies
         run: |
-          apt-get update
-          apt-get install -y zip gnupg curl
+          set -e
+          sudo apt-get update
+          sudo apt-get install -y curl gnupg lsb-release ca-certificates
+          sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list
 
-      - name: Remove exec_depend
-        uses: autowarefoundation/autoware-github-actions/remove-exec-depend@v1
+          sudo apt-get update
+          sudo apt-get install -y \
+            ros-humble-ros-base \
+            git build-essential cmake \
+            libboost-all-dev \
+            nlohmann-json3-dev libyaml-cpp-dev libgeographic-dev libpugixml-dev libeigen3-dev \
+            librange-v3-dev \
+            python3-colcon-common-extensions python3-ament-package \
+            ros-humble-mrt-cmake-modules \
+            ros-humble-geographic-msgs ros-humble-unique-identifier-msgs \
+            ros-humble-rosidl-typesupport-c ros-humble-rosidl-typesupport-cpp \
+            ros-humble-tf2 ros-humble-tf2-geometry-msgs ros-humble-visualization-msgs
+          sudo rm -rf /var/lib/apt/lists/*
 
-      - name: Initialize and update rosdep
-        shell: bash
+      - name: Build Lanelet2 (static, loop style)
         run: |
-          rosdep init || echo "rosdep has already been initialized."
-          rosdep update
-
-      - name: Install package dependencies with rosdep
-        shell: bash
-        run: |
-          DEBIAN_FRONTEND=noninteractive rosdep install -yqq --from-paths . --ignore-src --rosdistro humble -r
-
-      - name: Build the package for Release
-        shell: bash
-        run: |
+          set -e
           source /opt/ros/humble/setup.bash
-          colcon build \
-            --packages-select autoware_lanelet2_map_validator \
-            --event-handlers console_cohesion+ \
-            --cmake-args "-DCMAKE_BUILD_TYPE=Release"
+          git clone https://github.com/fzi-forschungszentrum-informatik/lanelet2.git
+          cd lanelet2
+          git checkout 1.2.2
+          mkdir -p build install
+          cd build
+          for pkg in lanelet2_core lanelet2_io lanelet2_projection lanelet2_traffic_rules lanelet2_routing lanelet2_validation; do
+            echo "==== Building $pkg ===="
+            mkdir -p $pkg
+            cd $pkg
+            if [ -d ../../install/share/lanelet2_core ]; then
+              export CMAKE_PREFIX_PATH="$(realpath ../../install):/opt/ros/humble:${CMAKE_PREFIX_PATH}"
+              export AMENT_PREFIX_PATH="$(realpath ../../install):${AMENT_PREFIX_PATH}"
+            else
+              export CMAKE_PREFIX_PATH="/opt/ros/humble"
+            fi
+            cmake ../../$pkg \
+              -DCMAKE_PREFIX_PATH="${CMAKE_PREFIX_PATH}" \
+              -DCMAKE_POSITION_INDEPENDENT_CODE=ON \
+              -DCMAKE_BUILD_TYPE=Release \
+              -DCMAKE_CXX_STANDARD=17 \
+              -DCMAKE_CXX_FLAGS="-fPIC" \
+              -DBUILD_SHARED_LIBS=OFF \
+              -DBUILD_TESTING=OFF \
+              -DCMAKE_INSTALL_PREFIX=../../install
+            make -j$(nproc)
+            make install
+            cd ..
+          done
 
-      - name: Package artifacts
-        id: package
+      - name: Build autoware_map_msgs only
         run: |
-          VERSION=${{ steps.get_version.outputs.version }}
-          ZIP_NAME="autoware_lanelet2_map_validator-${VERSION}-ubuntu-22.04.zip"
-          mkdir release_package
-          cp build/autoware_lanelet2_map_validator/autoware_lanelet2_map_validator release_package/
-          cp build/autoware_lanelet2_map_validator/libautoware_lanelet2_map_validator_lib.so release_package/
-          cp -r install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/config release_package/
-          cp -r install/autoware_lanelet2_map_validator/share/autoware_lanelet2_map_validator/map_requirements release_package/
-          zip -r $ZIP_NAME release_package
-          echo "zip_name=$ZIP_NAME" >> $GITHUB_OUTPUT
+          set -e
+          source /opt/ros/humble/setup.bash
+          mkdir -p autoware_ws/src
+          cd autoware_ws/src
+          git clone https://github.com/autowarefoundation/autoware_msgs.git
+          cd ..
+          colcon build --cmake-args -DBUILD_TESTING=OFF --packages-select autoware_map_msgs
 
-      - name: Sign the package with GPG
-        id: gpg-sign
+      - name: Build fmt (static)
         run: |
-          echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --batch --import
-          gpg --batch --yes --detach-sign --armor --pinentry-mode loopback --passphrase "${{ secrets.GPG_PASSPHRASE }}" -o ${{ steps.package.outputs.zip_name }}.asc ${{ steps.package.outputs.zip_name }}
-          echo "signature_name=${{ steps.package.outputs.zip_name }}.asc" >> $GITHUB_OUTPUT
+          set -e
+          git clone https://github.com/fmtlib/fmt.git
+          cd fmt
+          mkdir -p build temp_install
+          cd build
+          cmake .. \
+            -DCMAKE_POSITION_INDEPENDENT_CODE=ON \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_CXX_STANDARD=17 \
+            -DCMAKE_CXX_FLAGS="-fPIC" \
+            -DBUILD_SHARED_LIBS=OFF \
+            -DCMAKE_INSTALL_PREFIX=../temp_install
+          make -j$(nproc)
+          make install
 
-      - name: Install GitHub CLI
+      - name: Build autoware_lanelet2_extension (static lib)
         run: |
-          (type -p wget >/dev/null || (apt-get update && apt-get install wget -y))
-          mkdir -p -m 755 /etc/apt/keyrings
-          wget -qO- https://cli.github.com/packages/githubcli-archive-keyring.gpg | tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null
-          chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-          apt-get update
-          apt-get install gh -y
+          set -e
+          source /opt/ros/humble/setup.bash
+          # cp lanelet2_extension_CMakeLists.txt autoware_lanelet2_extension/autoware_lanelet2_extension/CMakeLists.txt
+          cd autoware_lanelet2_extension/autoware_lanelet2_extension
+          mkdir -p build
+          cd build
+          export CMAKE_PREFIX_PATH="$GITHUB_WORKSPACE/lanelet2/install:$GITHUB_WORKSPACE/autoware_ws/install:$GITHUB_WORKSPACE/fmt/temp_install:/opt/ros/humble"
+          cmake .. -C "$GITHUB_WORKSPACE/lanelet2_extension_CMakeLists.txt" \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DBUILD_SHARED_LIBS=OFF \
+            -DLANELET2_INSTALL_DIR="$GITHUB_WORKSPACE/lanelet2/install" \
+            -DFMT_INSTALL_DIR="$GITHUB_WORKSPACE/fmt/temp_install"
+          make -j$(nproc)
 
-      - name: Fix git ownership
-        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
-
-      - name: Upload artifacts to GitHub Release
+      - name: Build validator (static exe)
+        id: build_validator
         run: |
-          gh release upload "${{ steps.set-tag-name.outputs.tag-name }}" \
-            "${{ steps.package.outputs.zip_name }}" \
-            "${{ steps.gpg-sign.outputs.signature_name }}" \
-            --clobber
+          set -e
+          source /opt/ros/humble/setup.bash
+          cd autoware_lanelet2_map_validator
+          mkdir -p build
+          cd build
+          export CMAKE_PREFIX_PATH="$GITHUB_WORKSPACE/autoware_ws/install:$GITHUB_WORKSPACE/lanelet2/install:$GITHUB_WORKSPACE/fmt/temp_install:/opt/ros/humble"
+          cmake .. \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DBUILD_SHARED_LIBS=OFF \
+            -DLANELET2_INSTALL_DIR="$GITHUB_WORKSPACE/lanelet2/install" \
+            -DFMT_INSTALL_DIR="$GITHUB_WORKSPACE/fmt/temp_install" \
+            -DAUTOWARE_LANELET2_EXTENSION_DIR="$GITHUB_WORKSPACE/autoware_lanelet2_extension/autoware_lanelet2_extension"
+          make -j$(nproc)
+          make install
+          BIN=install/lib/autoware_lanelet2_map_validator/autoware_lanelet2_map_validator
+          ls -l $BIN
+          echo "artifact=$(realpath $BIN)" >> $GITHUB_OUTPUT
+
+      - name: Package artifact
+        run: |
+          mkdir -p dist
+          cp "${{ steps.build_validator.outputs.artifact }}" dist/
+          strip dist/autoware_lanelet2_map_validator || true
+          sha256sum dist/autoware_lanelet2_map_validator > dist/SHA256SUMS
+          cat dist/SHA256SUMS
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: autoware-lanelet2-map-validator
+          path: dist
+          retention-days: 14
+
+      - name: Prepare tag
+        id: tag
+        run: |
+          if [ -n "${{ github.event.inputs.tag_suffix }}" ]; then
+            TAG="validator-static-${{ github.event.inputs.tag_suffix }}"
+          else
+            TAG="validator-static-$(date -u +%Y%m%d%H%M)"
+          fi
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+
+      - name: Create Release
+        if: ${{ github.event.inputs.release == 'true' }}
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.tag.outputs.tag }}
+          name: ${{ steps.tag.outputs.tag }}
+          draft: false
+          prerelease: false
+          files: |
+            dist/autoware_lanelet2_map_validator
+            dist/SHA256SUMS
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Summary
+        run: |
+          echo "Tag: ${{ steps.tag.outputs.tag }}" >> $GITHUB_STEP_SUMMARY
+          echo "Release: ${{ github.event.inputs.release }}" >> $GITHUB_STEP_SUMMARY
+          echo "Binary path (artifact): dist/autoware_lanelet2_map_validator" >> $GITHUB_STEP_SUMMARY
