--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -106,7 +106,8 @@ jobs:
         run: |
           set -e
           source /opt/ros/humble/setup.bash
-          # cp lanelet2_extension_CMakeLists.txt autoware_lanelet2_extension/autoware_lanelet2_extension/CMakeLists.txt
+          git clone https://github.com/autowarefoundation/autoware_lanelet2_extension.git
+          cp lanelet2_extension_CMakeLists.txt autoware_lanelet2_extension/autoware_lanelet2_extension/CMakeLists.txt
           cd autoware_lanelet2_extension/autoware_lanelet2_extension
           mkdir -p build
           cd build
@@ -117,6 +118,7 @@ jobs:
             -DLANELET2_INSTALL_DIR="$GITHUB_WORKSPACE/lanelet2/install" \
             -DFMT_INSTALL_DIR="$GITHUB_WORKSPACE/fmt/temp_install"
           make -j$(nproc)
+          make install
 
       - name: Build validator (static exe)
         id: build_validator
