feat: add CMakeLists.txt for autoware_lanelet2_map_validator and update build process

--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -125,6 +125,7 @@ jobs:
         run: |
           set -e
           source /opt/ros/humble/setup.bash
+          cp validator_CMakeLists.txt autoware_lanelet2_map_validator/CMakeLists.txt
           cd autoware_lanelet2_map_validator
           mkdir -p build
           cd build
