fix: update checkout step name for clarity in build workflow

--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -29,8 +29,11 @@ jobs:
           REF_NAME="${{ github.event.inputs.tag-name }}"
           echo "tag-name=$REF_NAME" >> $GITHUB_OUTPUT
       
-      - name: Checkout
+      - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ steps.get_version.outputs.version }}
 
       - name: Install Dependencies
         run: |
