--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -36,6 +36,9 @@ jobs:
 
       - name: Cherry-pick patch for static build
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch origin static_build_helper
           git cherry-pick 2f7266dd30e35d79870682eb6862febda60ec31a
 
       - name: Install Dependencies
