--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -207,7 +207,7 @@ jobs:
 
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
-          SPEC_FILE=lanelet2_gui.spec
+          SPEC_FILE=map_validator_gui.spec
 
           pyinstaller "$SPEC_FILE"
 
