--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -207,6 +207,7 @@ jobs:
 
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
+          python3 -m pip install pyinstaller
           SPEC_FILE=map_validator_gui.spec
 
           pyinstaller "$SPEC_FILE"
