--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -178,10 +178,9 @@ jobs:
           mkdir -p autoware_lanelet2_extension_python_ws/src
           cd autoware_lanelet2_extension_python_ws/src
           ln -s ../../autoware_lanelet2_extension/autoware_lanelet2_extension_python .
-          if [ ! -f ${GITHUB_WORKSPACE}/.github/cmake/lanelet2_extension_python_CMakeLists.txt ]; then
-            echo "Error: CMakeLists.txt for autoware_lanelet2_extension_python not found!"
-            exit 1
-          fi
+          ls -l $GITHUB_WORKSPACE
+          ls -l $GITHUB_WORKSPACE/.github/cmake/
+          ls -l $PWD
           cp $GITHUB_WORKSPACE/.github/cmake/lanelet2_extension_python_CMakeLists.txt \
              autoware_lanelet2_extension_python/CMakeLists.txt
           
